[package]
name = "kuaidaili"
version = "0.1.0"
edition = "2018"

[features]
simple = []
sign = ["base64"]
default = ["simple"]

[dependencies]
base64 = { version = "0.13.0", optional = true }
chrono = "0.4.19"
derive_builder = "0.10.2"
reqwest = { version = "0.11.4", features = ["json"] }
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
serde_qs = "0.8.4"
thiserror = "1.0.26"

[dev-dependencies]
anyhow = "1.0.42"
insta = "1.7.1"
tokio = { version = "1.10.0", features = ["full"] }
